# scrapeZacks

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  config.ini  config.yaml  etf_screener.py  main_etf_screener.py  main_rank1.py  pyproject.toml  rank1.py  requirements.txt  setup.py  stock_screener.py
app/: scrape_zacks_app.py
docs/product/: diagram.md
examples/: input.csv
mypackage/: _version.py  app.py  main.py  utils.py
mypackage/archive/: def_schema.py
request_archive/: EXPORT.py  EXPORT_NOLOGIN.py
tests/: test_app.py  test_usa_pipeline.py
tests/assets/etf/: input.csv  output.xlsx  processed.csv
tests/assets/usa/: output.xlsx  processed.csv
